# track-camera

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  wrapper.h
cpptest/: main.cpp
examples/: basic.rs
samples/: trackme.webm
src/: calc_spatial_data.rs  frame_renderer.rs  lib.rs  parse_webm.rs  webm_parser.rs
src/shaders/: calc_spatial_data.glsl
webm_parser_glue/: CMakeLists.txt  build_test.sh  test.sh  webm_parser_glue.cc  webm_parser_glue.h  webm_parser_glue_test.cc
