[package]
authors = ["Andreas Stocker <shadowstep7@gmail.com>"]
build = "build.rs"
name = "track-camera"
version = "0.1.0"

[build-dependencies]
bindgen = "0.30.0"

[build-dependencies.gcc]
features = ["parallel"]
version = "0.3"

[dependencies]
cgmath = "0.15.0"
vulkano = "0.6.2"
vulkano-shader-derive = "0.6.2"
vulkano-win = "0.6.2"
winit = "0.7.6"
